--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ flutter:
     - assets/logos/
     - assets/icons/brands/
     - assets/images/on_boarding_images/
+    - assets/images/animations/
 
   fonts: 
     - family: Poppins
