--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ flutter:
     - assets/icons/brands/
     - assets/images/on_boarding_images/
     - assets/images/animations/
+    - assets/icons/categories/
 
   fonts: 
     - family: Poppins
