--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: f_store
-description: "A new Flutter project."
+description: 'A new Flutter project.'
 publish_to: 'none'
 version: 0.1.0
 
@@ -15,6 +15,8 @@ dependencies:
   intl: ^0.19.0
   logger: ^2.2.0
   url_launcher: ^6.2.6
+  # carousel slider
+  carousel_slider: ^4.2.1
 
   #Icons
   iconsax: ^0.0.8
@@ -40,10 +42,11 @@ flutter:
     - assets/images/on_boarding_images/
     - assets/images/animations/
     - assets/icons/categories/
+    - assets/images/banners/
 
-  fonts: 
+  fonts:
     - family: Poppins
-      fonts: 
+      fonts:
         - asset: assets/fonts/Poppins-light.ttf
           weight: 300
         - asset: assets/fonts/Poppins-Regular.ttf
