--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   url_launcher: ^6.2.6
   # carousel slider
   carousel_slider: ^4.2.1
+  gap: ^3.0.1
 
   #Icons
   iconsax: ^0.0.8
@@ -43,6 +44,7 @@ flutter:
     - assets/images/animations/
     - assets/icons/categories/
     - assets/images/banners/
+    - assets/images/products/
 
   fonts:
     - family: Poppins
