--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,7 @@ dependencies:
   intl: ^0.19.0
   logger: ^2.2.0
   url_launcher: ^6.2.6
-  # carousel slider
-  carousel_slider: ^4.2.1
+
   gap: ^3.0.1
 
   #Icons
@@ -28,6 +27,11 @@ dependencies:
   #State Management
   get: ^4.6.6
   get_storage: ^2.1.1
+
+  #Product Specific
+  # carousel slider
+  carousel_slider: ^4.2.1
+  readmore: ^3.0.0
 
 dev_dependencies:
   flutter_test:
