--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,14 +15,16 @@ dependencies:
   intl: ^0.19.0
   logger: ^2.2.0
   url_launcher: ^6.2.6
+  connectivity_plus: ^6.0.3
+  flutter_native_splash: ^2.4.0
+  smooth_page_indicator: ^1.1.0
+  lottie: ^3.1.0
 
   gap: ^3.0.1
 
   #Icons
   iconsax: ^0.0.8
   cupertino_icons: ^1.0.8
-  flutter_native_splash: ^2.4.0
-  smooth_page_indicator: ^1.1.0
 
   #State Management
   get: ^4.6.6
@@ -33,6 +35,11 @@ dependencies:
   carousel_slider: ^4.2.1
   readmore: ^3.0.0
   flutter_rating_bar: ^4.0.1
+
+  #firebase
+  firebase_core: ^2.30.1
+  firebase_auth: ^4.19.4
+  cloud_firestore: ^4.17.2
 
 dev_dependencies:
   flutter_test:
