--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_auth: ^4.19.4
   cloud_firestore: ^4.17.2
 
+  #Google sign-in
+  google_sign_in: ^6.2.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
