--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   flutter_native_splash: ^2.4.0
   smooth_page_indicator: ^1.1.0
   lottie: ^3.1.0
+  # Shimmer effect
+  shimmer: ^3.0.0
 
   gap: ^3.0.1
 
